--- a/.drone.yml
+++ b/.drone.yml
@@ -6,10 +6,10 @@ steps:
 - name: test drone env
   image: golang:1.12-alpine
   commands:
-  - echo "DRONE_BRANCH: ${DRONE_BRANCH}"
-  - echo "DRONE_BUILD_NUMBER: ${DRONE_BUILD_NUMBER}"
-  - echo "DRONE_COMMIT: ${DRONE_COMMIT}"
-  - echo "DRONE_COMMIT_BRANCH: ${DRONE_COMMIT_BRANCH}"
-  - echo "DRONE_REPO: ${DRONE_REPO}"
-  - echo "DRONE_TAG: ${DRONE_TAG}"
-  - echo "DRONE_TARGET_BRANCH: ${DRONE_TARGET_BRANCH}"
+  - echo "DRONE_BRANCH = ${DRONE_BRANCH}"
+  - echo "DRONE_BUILD_NUMBER = ${DRONE_BUILD_NUMBER}"
+  - echo "DRONE_COMMIT = ${DRONE_COMMIT}"
+  - echo "DRONE_COMMIT_BRANCH = ${DRONE_COMMIT_BRANCH}"
+  - echo "DRONE_REPO = ${DRONE_REPO}"
+  - echo "DRONE_TAG = ${DRONE_TAG}"
+  - echo "DRONE_TARGET_BRANCH = ${DRONE_TARGET_BRANCH}"
