--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,7 @@ steps:
   settings:
     repo: 10.10.200.105:5500/drone-test
     insecure: true
+    registry: 10.10.200.105:5500
     dockerfile: docker/Dockerfile
     tags:
     - latest
