--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ steps:
   - >
     echo "DRONE_BRANCH = ${DRONE_BRANCH}";
     echo "DRONE_BUILD_NUMBER = ${DRONE_BUILD_NUMBER}";
+    echo "DRONE_BUILD_STATUS = ${DRONE_BUILD_STATUS}";
     echo "DRONE_COMMIT = ${DRONE_COMMIT}";
     echo "DRONE_COMMIT_BRANCH = ${DRONE_COMMIT_BRANCH}";
     echo "DRONE_REPO = ${DRONE_REPO}";
